more advanced dom manipulation examples

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <nav class="nav">
         <img
-          src=""
+          src="./img/logo"
           alt="Bankist logo"
           class="nav__logo"
           id="logo"
@@ -75,7 +75,7 @@
         <div class="features__feature">
           <div class="features__icon">
             <svg>
-              <use xlink:href="img/icons.svg#icon-monitor"></use>
+              <use xlink:href=""></use>
             </svg>
           </div>
           <h5 class="features__header">100% digital bank</h5>
